--- a/src/src/styles/_variables.scss
+++ b/src/src/styles/_variables.scss
@@ -1,18 +1,22 @@
 $primary-soft: #252836;
-$primary-bg-deep: #10141A;
-$primary-bg: #1F1D2B;
-$text-prim: #CECBDE;
-$text-light: #706D7E;
-$primary-tint: #00C5D6;
-$text-sec: #9E9BAD;
+$primary-bg-deep: #10141a;
+$primary-bg: #1f1d2b;
+$text-prim: #cecbde;
+$text-light: #706d7e;
+$primary-tint: #00c5d6;
+$text-sec: #9e9bad;
 $borders: #464353;
-$prim-shade-2: #9E9BAD;
-$success: #4DBF77;
-$prim-shade: #CECBDE;
-$primary-contrast: #1F1D2B;
+$prim-shade-2: #9e9bad;
+$success: #4dbf77;
+$prim-shade: #cecbde;
+$primary-contrast: #1f1d2b;
 $btn-prim-bkg: #252836;
 $btn-nav-prim-bkg: #252836;
-$btn-nav-prim-bkg-click-focus: #00C5D6;
-$btn-nav-prim-text: #706D7E;
+$btn-nav-prim-bkg-click-focus: #00c5d6;
+$btn-nav-prim-text: #706d7e;
 $btn-nav-prim-modals: #464353;
-$Danger: #FF3F69;
+$Danger: #ff3f69;
+$btn-prim-text: #cecbde;
+$Com-success-2: #60be7a;
+$btn-prim-text-click-focus: #1e1e1e;
+$primary-bg-deep-shade-2: #1e222d;
