--- a/src/app/modules/layout/layout.component.scss
+++ b/src/app/modules/layout/layout.component.scss
@@ -86,6 +86,7 @@
         background-color: $primary-bg;
         padding: 6px;
         font-size: 18px;
+        color: $text-sec;
       }
 
       ::ng-deep .p-button:focus-visible {
@@ -118,12 +119,32 @@
     padding: 15px;
     box-shadow: 0 16px 30px 0 rgba(0, 0, 0, 0.3);
     border-right: 2px solid $primary-bg-deep;
+
     button {
       color: #fff;
     }
 
     .logo {
       width: 64px;
+    }
+
+    .user {
+      padding: 0;
+    }
+
+    ::ng-deep {
+      .p-button-text:not(:disabled):hover {
+        background-color: unset !important;
+      }
+
+      .p-button {
+        padding: 0;
+
+        .pi {
+          font-size: 19px;
+          color: $text-sec;
+        }
+      }
     }
   }
 
@@ -140,7 +161,7 @@
     box-shadow: 0 16px 30px 0 rgba(0, 0, 0, 0.3);
     transition: height 0.3s ease;
     z-index: 1001;
-    gap: 30px;
+    gap: 20px;
 
     .logo {
       width: 64px;
@@ -149,7 +170,7 @@
     &.open {
       padding: 25px;
       border-radius: 15px;
-      height: 500px;
+      height: 600px;
       max-height: fit-content;
     }
 
@@ -157,8 +178,17 @@
       padding: 1rem;
     }
 
-    ::ng-deep .p-panelmenu {
-      gap: 20px;
+    ::ng-deep {
+      .p-panelmenu {
+        gap: 20px;
+      }
+
+      .p-panelmenu-submenu {
+        gap: 20px;
+        display: flex;
+        flex-direction: column;
+        padding-top: 20px !important;
+      }
     }
 
     .close-btn {
@@ -168,7 +198,18 @@
         background-color: transparent;
         padding: 0;
         border: 0;
+
+        .pi {
+          font-size: 16px;
+          color: $text-sec;
+        }
       }
+    }
+
+    .user {
+      height: 98px;
+      display: flex;
+      align-items: end;
     }
   }
 
@@ -180,6 +221,14 @@
     bottom: 0;
     background: rgba($primary-soft, 0.7);
     z-index: 1000;
+  }
+
+  .content {
+    flex: 1;
+    padding: 20px;
+    transition: margin-left 0.3s ease;
+    overflow: hidden;
+    overflow-y: auto;
   }
 
   @media (max-width: 768px) {
