--- a/src/app/modules/layout/layout.component.scss
+++ b/src/app/modules/layout/layout.component.scss
@@ -225,7 +225,7 @@
 
   .content {
     flex: 1;
-    padding: 20px;
+    padding: 20px 30px;
     transition: margin-left 0.3s ease;
     overflow: hidden;
     overflow-y: auto;
